Test/git-issues/git-issue-2106.dfy.expect
git-issue-2106.dfy(5,27): Error: wrong number of arguments (predicate 'P' expects 1, got 0)
1 resolution/type errors detected in git-issue-2106.dfy
